#4 Generator now able to generate code that can be round tripped, Pin parameters and other settings are set in generator and saved in project. First working Java API with reasonable documentation.